# app/models/document.go
@@ -10,9 +10,21 @@ type Document struct {
 	Description string            `json:"description,omitempty"`
 	Date        string            `json:"date,omitempty"`
 	File        string            `json:"file,omitempty"`
-	Category    string       	  `json:"category,omitempty"`
+	Category    string            `json:"category,omitempty"`
 	Priority    int               `json:"priority,omitempty"`
 	Content     map[string]string `json:"content,omitempty"`
+	UserID      string            `json:"-" binding:"required"`
 	CreatedAt   time.Time         `json:"created_at"`
 	UpdatedAt   time.Time         `json:"updated_at"`
+}
+
+type DocumentCreation struct {
+	Title       string
+	Description string
+	Date        string
+	File        string
+	Category    string
+	Priority    int
+	Content     map[string]string
+	UserID      string
 }
